# Aide-cli

./: .gitignore  README.md  config.py  main.py  pyproject.toml
agent/: memory_agent.py  react_agent.py
chat/: session_logger.py
logs/: logging_server.py
models/: zhipu_chat.py
tools/: file_tool.py  terminal_tool.py  web_tool.py
